[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/npcs/portal/Untitled_Artwork(1).png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/npcs/portal/Untitled_Artwork(2).png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/npcs/portal/Untitled_Artwork.png" type="Texture" id=3]
[ext_resource path="res://assets/objects/Portal.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/dispCRAZY.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D displace : hint_albedo;
uniform float dispAmt : hint_range(0, 0.1);
uniform float abberationAmtX : hint_range(0, 0.1);
uniform float abberationAmtY : hint_range(0, 0.1);
uniform float dispSize : hint_range(0, 2);

void fragment ()
{
	// Displace
	vec4 disp = texture(displace, SCREEN_UV * dispSize);
	vec2 newUV = SCREEN_UV + disp.xy * dispAmt;
	// Chromatic Abberation
	
	COLOR.r = texture(SCREEN_TEXTURE, newUV - vec2(abberationAmtX, abberationAmtY)).r;
	COLOR.g = texture(SCREEN_TEXTURE, newUV).g;
	COLOR.b = texture(SCREEN_TEXTURE, newUV + vec2(abberationAmtX, abberationAmtY)).b;
	COLOR.a = texture(SCREEN_TEXTURE, newUV).a;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/dispAmt = 0.026
shader_param/abberationAmtX = 0.004
shader_param/abberationAmtY = 0.029
shader_param/dispSize = 0.0
shader_param/displace = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25, 25.5 )

[node name="Portal" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.052, 0.052 )
frames = SubResource( 1 )

[node name="GlitchFX" type="ColorRect" parent="."]
visible = false
material = SubResource( 3 )
margin_left = -52.0
margin_top = -53.0
margin_right = 7172.0
margin_bottom = 9897.0
rect_scale = Vector2( 0.0137043, 0.0101503 )

[node name="DispSizeTimer" type="Timer" parent="GlitchFX"]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, -1.5 )
shape = SubResource( 4 )

[node name="NextLevelTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="GlitchFX/DispSizeTimer" to="." method="_on_DispSizeTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="NextLevelTimer" to="." method="_on_NextLevelTimer_timeout"]
